--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -32,7 +35,11 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": ["error", {
+        "ignores": ["default"]
+      }]
+    }
   },
   "browserslist": [
     "> 1%",
