Vue-router is added

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -36,9 +37,14 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/multi-word-component-names": ["error", {
-        "ignores": ["default"]
-      }]
+      "vue/multi-word-component-names": [
+        "error",
+        {
+          "ignores": [
+            "default"
+          ]
+        }
+      ]
     }
   },
   "browserslist": [
