--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
