--- a/package.json
+++ b/package.json
@@ -37,16 +37,7 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {
-      "vue/multi-word-component-names": [
-        "error",
-        {
-          "ignores": [
-            "default"
-          ]
-        }
-      ]
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
